Added theme updates 20250407

--- a/cartanza-product.hbs
+++ b/cartanza-product.hbs
@@ -20,7 +20,7 @@ into the {body} tag of the default.hbs template --}}
             </ul>
             </div>
             <div class="cartanza-product-image-container" style="width:80%;">
-                <img class="" src="/content/images/products/{{img_url images.[0].src}}" alt="{{tittle}}" id="product-image-target" style="width: 100%;">
+                <img class="" src="/content/images/products/{{img_url images.[0].src}}" alt="{{tittle}}" id="product-image-target" style="width: 100%;margin-top: 16px;">
             </div>
         </div>
         <div class="cartanza-product-description-container" style="padding:20px;width:50%;">
@@ -34,8 +34,8 @@ into the {body} tag of the default.hbs template --}}
             {{#if event}}
                 <br/>
                 {{#foreach variants}}
-                    <p> 
-                        {{#if (gt inventory_quantity 0)}}
+                    <p>
+                        {{#if (or (gt inventory_quantity 0) (eq inventory_policy "allow"))}}
                             {{#if optiononevalue.value}}
                                 {{ optiononevalue.value }}
                             {{else}}
@@ -72,7 +72,7 @@ into the {body} tag of the default.hbs template --}}
                 <div class="cartanza-product-form-select-container" style="margin: 20px;border: 1px solid #e6e6e6 !important;border-radius: 2px;">
                     <select name="id" id="variant-selector" class="form-control" style="display: block;width: 100%;padding: .5rem .75rem;color: #495057;border:1px solid rgba(0, 0, 0, .15);border-radius:.25rem;">
                         {{#foreach variants}}
-                        {{#if (gt inventory_quantity 0)}}
+                        {{#if (or (gt inventory_quantity 0) (eq inventory_policy "allow"))}}
                         <option data-sku="{{ sku }}" value="{{ id }}">
                             {{#if optiononevalue.value}}
                                 {{ optiononevalue.value }}
@@ -107,7 +107,7 @@ into the {body} tag of the default.hbs template --}}
                 </div>
                 <div class="cartanza-product-form-button-container">
                     {{#foreach variants}}
-                        {{#if (gt inventory_quantity 0)}}
+                        {{#if (or (gt inventory_quantity 0) (eq inventory_policy "allow"))}}
                             {{#if (eq @index 0) }}
                             <div class="cartanza-product-quantity-container" style="margin:20px;display:flex;align-items:center;">
                             <div class="cartanza-product-input-container" style="border:2px solid #e6e6e6;border-radius: 3px;">
